@@ -1,3 +1,9 @@
+2005-03-05 16:01  antirez
+
+	* ChangeLog, Makefile, jim-aio.c, jim.c, jim.h: Initial version of
+	  AIO (ANSI C I/O) extension added.  Some bit of const safeness. A
+	  new API function to get the object length, Jim_Length().
+
 2005-03-05 13:22  antirez
 
 	* ChangeLog, jim-posix.c, jim-win32.c, jim-win32com.c, jim.c,
